# donkey

./: .gitignore  CMakeLists.txt  CMakePresets.json  genetic_algorithm.cpp  genetic_algorithm.h  main.cpp  neural_net.cpp  neural_net.h
